--- a/index.html
+++ b/index.html
@@ -8,14 +8,31 @@
 
 		<!-- library css -->
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 
 		<!-- custom css -->
 		<link rel="stylesheet" href="./assets/css/style.css">
 	</head>
 
 	<body>
+		<div class="container-fluid">
 
+			<div class="row titleBar">
+				<h1>Weather Forecast</h1>
+			</div>
+			<div class="row contentArea">
+				<div class="col-lg-4 citySelectorArea">
+					<!-- city search & list -->
 		<h1>Weather Dashboard</h1>
+
+
+				</div>
+				<div class="col-lg-8 forecastArea">
+					<h2>display weather</h2>
+					<!-- weather details -->
+				</div>
+			</div>
+		</div>
 
 		<!-- library js -->
 		<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
