city search form

--- a/index.html
+++ b/index.html
@@ -23,7 +23,15 @@
 			<div class="row contentArea">
 				<div class="col-lg-4 citySelectorArea">
 					<!-- city search & list -->
-		<h1>Weather Dashboard</h1>
+					<form class="form-inline citySearch">
+						<div class="form-group">
+							<label for="citySearchBox" class="sr-only">City</label>
+							<input type="text" class="form-control" id="citySearchBox" placeholder="Search Cities">
+						</div>
+						<button type="submit" class="btn btn-primary">
+							<i class="bi bi-search"></i>
+						</button>
+					</form>
 
 
 				</div>
