city list format

--- a/index.html
+++ b/index.html
@@ -26,13 +26,15 @@
 					<form class="form-inline citySearch">
 						<div class="form-group">
 							<label for="citySearchBox" class="sr-only">City</label>
-							<input type="text" class="form-control" id="citySearchBox" placeholder="Search Cities">
+							<input type="text" class="form-control" id="citySearchBox" placeholder="Search for Cities">
 						</div>
 						<button type="submit" class="btn btn-primary">
 							<i class="bi bi-search"></i>
 						</button>
 					</form>
 
+					<ul class="cityList">
+					</ul>
 
 				</div>
 				<div class="col-lg-8 forecastArea">
