--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 		<!-- custom css -->
 		<link rel="stylesheet" href="./assets/css/style.css">
+		<link rel="stylesheet" href="./assets/css/theme.css">
 	</head>
 
 	<body>
