--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 			<div class="row contentArea">
 				<div class="col-lg-4 citySelectorArea">
 					<!-- city search & list -->
-					<form class="form-inline citySearch">
+					<form class="form-inline citySearch" autocomplete="off">
 						<div class="form-group">
 							<label for="citySearchBox" class="sr-only">City</label>
-							<input type="text" class="form-control" id="citySearchBox" placeholder="Search for Cities">
+							<input type="text" class="form-control" id="citySearchBox" name="cityName" placeholder="Search for Cities" maxlength="20">
 						</div>
 						<button type="submit" class="btn btn-primary">
 							<i class="bi bi-search"></i>
