--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
 
 				</div>
 				<div class="col-lg-8 forecastArea">
-					<h2>display weather</h2>
-					<!-- weather details -->
+					<!-- forecast goes here -->
 				</div>
 			</div>
 		</div>
